Changed index.html verbiage to be more generic

--- a/default/html/index.html
+++ b/default/html/index.html
@@ -750,12 +750,12 @@ table.tr {
 										<tbody>
 											<tr>
 												<td class="column_cell pte pb tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;padding-top: 32px;padding-bottom: 16px;line-height: inherit;">
-													<h1 style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #4d4d4d;font-size: 26px;line-height: 34px;">Visualize impactful mindshare</h1>
-													<p class="lead tm" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #b3b3b3;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Lighted much by bought lantern more tortoise chuckled</p>
+													<h1 style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #4d4d4d;font-size: 26px;line-height: 34px;">Header Text</h1>
+													<p class="lead tm" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #b3b3b3;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Regular Text</p>
 													<table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
 														<tbody>
 															<tr>
-																<td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #2ccf9c;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Button</span></a></td>
+																<td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #2ccf9c;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Call To Action</span></a></td>
 															</tr>
 														</tbody>
 													</table>
