--- a/default/html/account_confirmation.html
+++ b/default/html/account_confirmation.html
@@ -647,7 +647,7 @@ table.tr {
 										<tbody>
 											<tr>
 												<td class="column_cell tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;line-height: inherit;">
-													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Ceremonially then stunning duteously a privately less asininely the upheld feverish coasted against much darn like had much a clumsily strict.</p>
+													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Welcome and thank you for signing up with us today! <br> Please confirm your verification below.</p>
 												</td>
 											</tr>
 										</tbody>
