--- a/default/html/index.html
+++ b/default/html/index.html
@@ -1367,7 +1367,7 @@ table.tr {
 														</tbody>
 													</table>
 													<h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Password reset</h1>
-													<p class="lead" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #ffffff;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Soneome has requested to have your password reset.</p>
+													<p class="lead" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #ffffff;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Someone has requested to have your password reset.</p>
 													<table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
 														<tbody>
 															<tr>
