--- a/default/html/Completed/accountWelcome.html
+++ b/default/html/Completed/accountWelcome.html
@@ -33,7 +33,7 @@ body {
 #outlook a {
   padding: 0; }
 
-  img {
+img {
   outline: none;
   border: 0;
   text-decoration: none;
@@ -551,7 +551,7 @@ table.tr {
 	<div class="email_summary" style="box-sizing: border-box;display: none;font-size: 1px;line-height: 1px;max-height: 0px;max-width: 0px;opacity: 0;overflow: hidden;">
 		&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
 	</div>
-	<!-- header_center -->
+	<!-- header_social -->
 	<table role="presentation" class="email_table" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
 		<tbody>
 			<tr>
@@ -560,16 +560,18 @@ table.tr {
 					<table role="presentation" class="content_section" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;max-width: 640px;margin: 0 auto;text-align: center;min-width: 0 !important;">
 						<tbody>
 							<tr>
-								<td class="content_cell content_b brt tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;border-radius: 4px 4px 0 0;text-align: center;font-size: 0 !important;">
-									<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
-										<tbody>
-											<tr>
-												<td class="column_cell py tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;padding-top: 16px;padding-bottom: 16px;line-height: inherit;">
-													<a href="#" style="line-height: inherit;text-decoration: none;color: #388cda;"><img src="images/logo.png" width="136" height="32" alt="Lil Commerce website" style="max-width: 140px;outline: none;border: 0;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;line-height: 100%;"></a>
-												</td>
-											</tr>
-										</tbody>
-									</table>
+								<td class="content_cell content_b pb brt tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;border-radius: 4px 4px 0 0;text-align: center;padding-bottom: 16px;font-size: 0 !important;">
+									<!--[if (mso)|(IE)]><table role="presentation" width="624" border="0" cellspacing="0" cellpadding="0" align="center" style="vertical-align:top;width:624px;Margin:0 auto;"><tbody><tr><td width="156" style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+									<div class="col_1" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 156px;min-width: 0 !important;font-size: 0 !important;">
+										<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
+										</table>
+									</div>
+									<!--[if (mso)|(IE)]></td><td width="468" style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+									<div class="col_3" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 468px;min-width: 0 !important;font-size: 0 !important;">
+										<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
+										</table>
+									</div>
+									<!--[if (mso)|(IE)]></td></tr></tbody></table><![endif]-->
 								</td>
 							</tr>
 						</tbody>
@@ -579,7 +581,7 @@ table.tr {
 			</tr>
 		</tbody>
 	</table>
-	<!-- hero_welcome -->
+	<!-- hero -->
 	<table role="presentation" class="email_table" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
 		<tbody>
 			<tr>
@@ -588,15 +590,15 @@ table.tr {
 					<table role="presentation" class="content_section" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;max-width: 640px;margin: 0 auto;text-align: center;min-width: 0 !important;">
 						<tbody>
 							<tr>
-								<td class="content_cell default_b hero_image pt pbe tc" background="images/hero_background.png" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-repeat: no-repeat;background-position: 50% 0;background-color: #388cda;text-align: center;padding-top: 16px;padding-bottom: 24px;font-size: 0 !important;">
+								<td class="content_cell default_b hero_image py tc" background="images/hero_background.png" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-repeat: no-repeat;background-position: 50% 0;background-color: #388cda;text-align: center;padding-top: 16px;padding-bottom: 16px;font-size: 0 !important;">
 									<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
 										<tbody>
 											<tr>
-												<td class="column_cell sc pt tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #ffffff;text-align: center;padding-top: 16px;line-height: inherit;">
+												<td class="column_cell py tc sc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #ffffff;text-align: center;padding-top: 16px;padding-bottom: 16px;line-height: inherit;">
 													<table role="presentation" class="ic_h" align="center" width="80" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;">
 														<tbody>
 															<tr>
-																<svg width="165px" height="165px" viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <svg width="165px" height="165px" viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                       <g id="Artboard" transform="translate(-43.000000, -44.000000)" fill-rule="nonzero">
                                           <g id="Group" transform="translate(43.429706, 44.000000)">
@@ -608,8 +610,15 @@ table.tr {
 															</tr>
 														</tbody>
 													</table>
-													<h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Confirm your account</h1>
-													<p class="lead mb" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #ffffff;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 16px;"></p>
+													<h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Your account is active</h1>
+													<p class="lead sc" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #ffffff;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"></p>
+													<table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: Cer0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
+														<tbody>
+															<tr>
+																<td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #4ebcd4;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Insert Text Here</span></a></td>
+															</tr>
+														</tbody>
+													</table>
 												</td>
 											</tr>
 										</tbody>
@@ -655,64 +664,12 @@ table.tr {
 										<tbody>
 											<tr>
 												<td class="column_cell tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;line-height: inherit;">
-													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;">Welcome and thank you for signing up with us today! <br> Please verify your account below.</p>
+													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"> Insert Welcome Text Here</p>
 												</td>
 											</tr>
 										</tbody>
 									</table>
 								</td>
-							</tr>
-						</tbody>
-					</table>
-					<!--[if (mso)|(IE)]></td></tr></tbody></table><![endif]-->
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<!-- button_accent -->
-	<table role="presentation" class="email_table" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
-		<tbody>
-			<tr>
-				<td class="email_body tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: 100%;padding-left: 8px;padding-right: 8px;background-color: #eceff1;text-align: center;font-size: 0 !important;">
-					<!--[if (mso)|(IE)]><table role="presentation" width="640" border="0" cellspacing="0" cellpadding="0" align="center" style="vertical-align:top;width:640px;Margin:0 auto;"><tbody><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-					<table role="presentation" class="content_section" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;max-width: 640px;margin: 0 auto;text-align: center;min-width: 0 !important;">
-						<tbody>
-							<tr>
-								<td class="content_cell content_b tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;text-align: center;font-size: 0 !important;">
-									<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
-										<tbody>
-											<tr>
-												<td class="column_cell tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;line-height: inherit;">
-													<table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
-														<tbody>
-															<tr>
-																<td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #4ebcd4;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Confirm account</span></a></td>
-															</tr>
-														</tbody>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<!--[if (mso)|(IE)]></td></tr></tbody></table><![endif]-->
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<!-- spacer -->
-	<table role="presentation" class="email_table" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
-		<tbody>
-			<tr>
-				<td class="email_body tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: 100%;padding-left: 8px;padding-right: 8px;background-color: #eceff1;text-align: center;font-size: 0 !important;">
-					<!--[if (mso)|(IE)]><table role="presentation" width="640" border="0" cellspacing="0" cellpadding="0" align="center" style="vertical-align:top;width:640px;Margin:0 auto;"><tbody><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-					<table role="presentation" class="content_section" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;max-width: 640px;margin: 0 auto;text-align: center;min-width: 0 !important;">
-						<tbody>
-							<tr>
-								<td class="content_cell content_b" height="32" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;font-size: 0 !important;">&nbsp;</td>
 							</tr>
 						</tbody>
 					</table>
@@ -735,7 +692,7 @@ table.tr {
 							<tr>
 								<td class="content_cell py brb tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;border-radius: 0 0 4px 4px;text-align: center;padding-top: 16px;padding-bottom: 16px;font-size: 0 !important;">
 									<!--[if (mso)|(IE)]><table role="presentation" width="624" border="0" cellspacing="0" cellpadding="0" align="center" style="vertical-align:top;width:624px;Margin:0 auto;"><tbody><tr><td width="468" style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-									<div class="col_3" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 468px;min-width: 0 !important;font-size: 0 !important;">
+								<!--	<div class="col_3" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 468px;min-width: 0 !important;font-size: 0 !important;">
 										<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
 											<tbody>
 												<tr>
@@ -745,13 +702,16 @@ table.tr {
 															<span class="tm" style="line-height: inherit;color: #b3b3b3;">20464 Lynch Haven, Emardton, CT 12471-4107, USA</span>
 														</p>
 														<p class="mb_0" style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 0;"><a href="#" style="line-height: inherit;text-decoration: none;color: #388cda;"><span style="line-height: inherit;color: #388cda;">About</span></a> &nbsp; · &nbsp; <a href="#" style="line-height: inherit;text-decoration: none;color: #388cda;"><span style="line-height: inherit;color: #388cda;">Products</span></a> &nbsp; · &nbsp; <a href="#" style="line-height: inherit;text-decoration: none;color: #388cda;"><span style="line-height: inherit;color: #388cda;">Help</span></a> &nbsp; · &nbsp; <a href="#" style="line-height: inherit;text-decoration: none;color: #388cda;"><span style="line-height: inherit;color: #388cda;">Unsubscribe</span></a></p>
-													</td>
+                          </td>
 												</tr>
 											</tbody>
 										</table>
-									</div>
+                  </div> -->
+                  
+                            <!--       © FOOTER WITH PAGE LINKS ABOVE         -->
+
 									<!--[if (mso)|(IE)]></td><td width="156" style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-									<div class="col_1" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 156px;min-width: 0 !important;font-size: 0 !important;">
+									<!--<div class="col_1" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 156px;min-width: 0 !important;font-size: 0 !important;">
 										<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
 											<tbody>
 												<tr>
@@ -761,7 +721,10 @@ table.tr {
 												</tr>
 											</tbody>
 										</table>
-									</div>
+                  </div>-->
+                  
+                  <!--   SOCIAL MEDIA FOOTER BUTTONS ABOVE         -->
+
 									<!--[if (mso)|(IE)]></td></tr></tbody></table><![endif]-->
 								</td>
 							</tr>
