Worked on padding and button orientation of welcome and registration page

--- a/default/html/Completed/accountRegistration.html
+++ b/default/html/Completed/accountRegistration.html
@@ -595,7 +595,7 @@ table.tr {
 													<table role="presentation" class="ic_h" align="center" width="80" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;">
 														<tbody>
 															<tr>
-																<svg width="165px" height="165px" viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+																<svg width="50px" viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                       <g id="Artboard" transform="translate(-43.000000, -44.000000)" fill-rule="nonzero">
                                           <g id="Group" transform="translate(43.429706, 44.000000)">
@@ -765,7 +765,7 @@ table.tr {
 										</table>
                   </div>-->
                   
-                  <!--   SOCIAL MEDIA FOOTER BUTTONS ABOVE         -->
+                           <!--            SOCIAL MEDIA FOOTER BUTTONS ABOVE         -->
 									<!--[if (mso)|(IE)]></td></tr></tbody></table><![endif]-->
 								</td>
 							</tr>
