--- a/default/html/Completed/accountWelcome.html
+++ b/default/html/Completed/accountWelcome.html
@@ -560,7 +560,7 @@ table.tr {
 					<table role="presentation" class="content_section" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;max-width: 640px;margin: 0 auto;text-align: center;min-width: 0 !important;">
 						<tbody>
 							<tr>
-								<td class="content_cell content_b pb brt tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;border-radius: 4px 4px 0 0;text-align: center;padding-bottom: 16px;font-size: 0 !important;">
+								<td class="content_cell content_b pb brt tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;line-height: inherit;padding-left: 8px;padding-right: 8px;background-color: #ffffff;border-radius: 4px 4px 0 0;text-align: center;padding-bottom: 32px;font-size: 0 !important;">
 									<!--[if (mso)|(IE)]><table role="presentation" width="624" border="0" cellspacing="0" cellpadding="0" align="center" style="vertical-align:top;width:624px;Margin:0 auto;"><tbody><tr><td width="156" style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
 									<div class="col_1" style="box-sizing: border-box;width: 100%;line-height: inherit;display: inline-block;vertical-align: top;max-width: 156px;min-width: 0 !important;font-size: 0 !important;">
 										<table role="presentation" class="column" width="100%" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;width: 100%;min-width: 0 !important;">
@@ -598,7 +598,7 @@ table.tr {
 													<table role="presentation" class="ic_h" align="center" width="80" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: 0;display: table;margin-left: auto;margin-right: auto;">
 														<tbody>
 															<tr>
-                                <svg width="165px" height="165px" viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <svg width="50px"  viewBox="0 0 165 165" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                       <g id="Artboard" transform="translate(-43.000000, -44.000000)" fill-rule="nonzero">
                                           <g id="Group" transform="translate(43.429706, 44.000000)">
@@ -607,18 +607,9 @@ table.tr {
                                       </g>
                                   </g>
                               </svg>
-															</tr>
+                              </tr>
+                              <h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Welcome!</h1>
 														</tbody>
-													</table>
-													<h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Your account is active</h1>
-													<p class="lead sc" style="font-family: Arial, Helvetica, sans-serif;font-size: 20px;color: #ffffff;line-height: 27px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"></p>
-													<table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: Cer0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
-														<tbody>
-															<tr>
-																<td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #4ebcd4;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Insert Text Here</span></a></td>
-															</tr>
-														</tbody>
-													</table>
 												</td>
 											</tr>
 										</tbody>
@@ -664,10 +655,18 @@ table.tr {
 										<tbody>
 											<tr>
 												<td class="column_cell tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;line-height: inherit;">
-													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"> Insert Welcome Text Here</p>
-												</td>
-											</tr>
-										</tbody>
+													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"> Your account is now Active! Explore your new email service.</p>
+                        </td>
+                      </tr>
+                    </table>
+                    <table role="presentation" class="ebtn tc" align="center" border="0" cellspacing="0" cellpadding="0" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-spacing: Cer0;display: table;margin-left: auto;margin-right: auto;text-align: center;">
+                      <tbody>
+                        <tr>
+                          <td class="accent_b" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;background-color: #4ebcd4;line-height: 22px;font-size: 18px;font-weight: bold;padding: 13px 24px;mso-line-height-rule: exactly;border-radius: 4px;text-align: center;"><a href="#" style="line-height: inherit;text-decoration: none;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;"><span style="line-height: inherit;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: #ffffff;">Explore</span></a></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    </tbody>
 									</table>
 								</td>
 							</tr>
