fix'd up the styles on registration to look like other completed emails, also add'd a little more content

--- a/default/html/Completed/accountWelcome.html
+++ b/default/html/Completed/accountWelcome.html
@@ -608,7 +608,7 @@ table.tr {
                                   </g>
                               </svg>
                               </tr>
-                              <h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Welcome!</h1>
+                              <h1 class="sc" style="font-family: Arial, Helvetica, sans-serif;font-weight: bold;padding: 0;margin-left: 0;margin-right: 0;margin-top: 16px;margin-bottom: 8px;color: #ffffff;font-size: 26px;line-height: 34px;">Welcome to Relate Space!</h1>
 														</tbody>
 												</td>
 											</tr>
@@ -655,7 +655,7 @@ table.tr {
 										<tbody>
 											<tr>
 												<td class="column_cell tc" style="box-sizing: border-box;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;padding-left: 8px;padding-right: 8px;font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;text-align: center;line-height: inherit;">
-													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"> Your account is now Active! Explore your new email service.</p>
+													<p style="font-family: Arial, Helvetica, sans-serif;font-size: 16px;color: #757575;line-height: 23px;mso-line-height-rule: exactly;margin-top: 0;margin-bottom: 24px;"> Thank you for registiring your account on Relate Space! Your account is now Active, so make sure to explore your new email service.</p>
                         </td>
                       </tr>
                     </table>
